--- a/src/ar_slam_ros/vins_estimator/CMakeLists.txt
+++ b/src/ar_slam_ros/vins_estimator/CMakeLists.txt
@@ -34,6 +34,7 @@ include_directories(
 catkin_package()
 
 add_executable(vins_estimator
+    src/ORBextractor.cpp
     src/estimator_node.cpp
     src/parameters.cpp
     src/estimator.cpp
