need to optimize the matching result

--- a/src/ar_slam_ros/feature_tracker/CMakeLists.txt
+++ b/src/ar_slam_ros/feature_tracker/CMakeLists.txt
@@ -11,11 +11,25 @@ find_package(catkin REQUIRED COMPONENTS
     sensor_msgs
     cv_bridge
     camera_model
+    message_generation
     )
 
 find_package(OpenCV REQUIRED)
 
-catkin_package()
+add_message_files(
+  FILES
+  Feature.msg
+)
+
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+  sensor_msgs
+)
+
+catkin_package(
+    CATKIN_DEPENDS message_runtime
+)
 
 include_directories(
     ${catkin_INCLUDE_DIRS}
@@ -32,6 +46,9 @@ add_executable(feature_tracker
     src/feature_tracker_node.cpp
     src/parameters.cpp
     src/feature_tracker.cpp
+    src/BRIEF.cpp
+    src/DUtils/Random.cpp
+    src/DUtils/Timestamp.cpp
     )
 
 target_link_libraries(feature_tracker ${catkin_LIBRARIES} ${OpenCV_LIBS})
