--- a/src/ar_slam_ros/vins_estimator/CMakeLists.txt
+++ b/src/ar_slam_ros/vins_estimator/CMakeLists.txt
@@ -14,11 +14,13 @@ find_package(catkin REQUIRED COMPONENTS
     tf
     cv_bridge
     camera_model
+    feature_tracker
     )
 
 find_package(OpenCV REQUIRED)
 
-# message(WARNING "OpenCV_VERSION: ${OpenCV_VERSION}")
+message(WARNING "OpenCV_VERSION: ${OpenCV_VERSION}")
+message(WARNING "OpenCV_Path: ${OpenCV_INCLUDE_DIRS}")
 
 find_package(Ceres REQUIRED)
 
