--- a/src/ar_slam_ros/vins_estimator/package.xml
+++ b/src/ar_slam_ros/vins_estimator/package.xml
@@ -41,6 +41,8 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>camera_model</build_depend>
+  <build_depend>feature_tracker</build_depend>
   <run_depend>roscpp</run_depend>
 
 
