add cuda sift detection

--- a/src/ar_slam_ros/feature_tracker/CMakeLists.txt
+++ b/src/ar_slam_ros/feature_tracker/CMakeLists.txt
@@ -14,6 +14,25 @@ find_package(catkin REQUIRED COMPONENTS
     message_generation
     )
 
+find_package(CUDA)
+if (NOT CUDA_FOUND)
+  message(STATUS "CUDA not found. Project will not be built.")
+endif(NOT CUDA_FOUND)
+
+if (WIN32)
+  set(EXTRA_CXX_FLAGS "/DVERBOSE /D_CRT_SECURE_NO_WARNINGS ")
+  list(APPEND CUDA_NVCC_FLAGS "-arch=sm_35;--compiler-options;-O2;-DVERBOSE") 
+endif()
+if (UNIX)
+  if (APPLE)
+    set(EXTRA_CXX_FLAGS "-DVERBOSE -msse2")
+    list(APPEND CUDA_NVCC_FLAGS "-arch=sm_35;--compiler-options;-O2;-DVERBOSE") 
+  else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -msse2 ")
+    list(APPEND CUDA_NVCC_FLAGS "-lineinfo;-ccbin;/usr/bin/gcc-5;--compiler-options;-O2;-D_FORCE_INLINES;-DVERBOSE_NOT") 
+  endif()
+endif()
+
 find_package(OpenCV REQUIRED)
 
 add_message_files(
@@ -33,6 +52,7 @@ catkin_package(
 
 include_directories(
     ${catkin_INCLUDE_DIRS}
+    CudaSift
     )
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
@@ -42,13 +62,25 @@ include_directories(
   ${EIGEN3_INCLUDE_DIR}
 )
 
-add_executable(feature_tracker
+set(cuda_sources
+  CudaSift/cudaImage.cu  
+  CudaSift/cudaImage.h  
+  CudaSift/cudaSiftH.cu 
+  CudaSift/cudaSiftH.h  
+  CudaSift/matching.cu  
+  CudaSift/cudaSiftD.h  
+  CudaSift/cudaSift.h  
+  CudaSift/cudautils.h
+)
+
+cuda_add_executable(feature_tracker
     src/feature_tracker_node.cpp
     src/parameters.cpp
     src/feature_tracker.cpp
     src/BRIEF.cpp
     src/DUtils/Random.cpp
     src/DUtils/Timestamp.cpp
+    ${cuda_sources}
     )
 
-target_link_libraries(feature_tracker ${catkin_LIBRARIES} ${OpenCV_LIBS})
+target_link_libraries(feature_tracker ${catkin_LIBRARIES} ${OpenCV_LIBS} ${CUDA_cudadevrt_LIBRARY} )
