--- a/src/ar_slam_ros/config/realsense/nrsl_realsense_d435i_841512071464.yaml
+++ b/src/ar_slam_ros/config/realsense/nrsl_realsense_d435i_841512071464.yaml
@@ -42,7 +42,7 @@ extrinsicTranslation: !!opencv-matrix
    data: [0.07494282, -0.01077138, -0.00641822]
 
 #feature traker paprameters
-max_cnt: 200            # max feature number in feature tracking
+max_cnt: 150            # max feature number in feature tracking
 min_dist: 30            # min distance between two features 
 freq: 10                # frequence (Hz) of publish tracking result. At least 10Hz for good estimation. If set 0, the frequence will be same as raw image 
 F_threshold: 1.0        # ransac threshold (pixel)
@@ -92,3 +92,4 @@ fMinThFAST: 7
 initBlur: 1.6
 thresh: 1.0
 nOctaveLayers: 3
+scale_thresh: 1.0
