fix camera parameters uncorrect problem

--- a/src/ar_slam_ros/vins_estimator/CMakeLists.txt
+++ b/src/ar_slam_ros/vins_estimator/CMakeLists.txt
@@ -32,26 +32,30 @@ include_directories(
 
 catkin_package()
 
+add_library(vins_lib
+src/ORBextractor.cpp
+src/parameters.cpp
+src/factor/pose_local_parameterization.cpp
+src/factor/projection_factor.cpp
+src/factor/projection_td_factor.cpp
+src/factor/marginalization_factor.cpp
+src/utility/utility.cpp
+src/utility/visualization.cpp
+src/utility/CameraPoseVisualization.cpp
+src/initial/solve_5pts.cpp
+src/initial/initial_aligment.cpp
+src/initial/initial_sfm.cpp
+src/initial/initial_ex_rotation.cpp
+)
+
+target_link_libraries(vins_lib ${catkin_LIBRARIES} ${OpenCV_LIBS} ${CERES_LIBRARIES}) 
+
 add_executable(vins_estimator
-    src/ORBextractor.cpp
     src/estimator_node.cpp
-    src/parameters.cpp
     src/estimator.cpp
     src/feature_manager.cpp
-    src/factor/pose_local_parameterization.cpp
-    src/factor/projection_factor.cpp
-    src/factor/projection_td_factor.cpp
-    src/factor/marginalization_factor.cpp
-    src/utility/utility.cpp
-    src/utility/visualization.cpp
-    src/utility/CameraPoseVisualization.cpp
-    src/initial/solve_5pts.cpp
-    src/initial/initial_aligment.cpp
-    src/initial/initial_sfm.cpp
-    src/initial/initial_ex_rotation.cpp
     )
 
-
-target_link_libraries(vins_estimator ${catkin_LIBRARIES} ${OpenCV_LIBS} ${CERES_LIBRARIES}) 
+target_link_libraries(vins_estimator ${catkin_LIBRARIES} ${OpenCV_LIBS} ${CERES_LIBRARIES} vins_lib) 
 
 
