--- a/src/ar_slam_ros/feature_tracker/CMakeLists.txt
+++ b/src/ar_slam_ros/feature_tracker/CMakeLists.txt
@@ -28,7 +28,7 @@ if (UNIX)
     set(EXTRA_CXX_FLAGS "-DVERBOSE -msse2")
     list(APPEND CUDA_NVCC_FLAGS "-arch=sm_35;--compiler-options;-O2;-DVERBOSE") 
   else()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -msse2 ")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
     list(APPEND CUDA_NVCC_FLAGS "-lineinfo;-ccbin;/usr/bin/gcc-5;--compiler-options;-O2;-D_FORCE_INLINES;-DVERBOSE_NOT") 
   endif()
 endif()
