add one exposure experiment

--- a/src/ar_slam_ros/config/realsense/nrsl_realsense_d435i_841512071464.yaml
+++ b/src/ar_slam_ros/config/realsense/nrsl_realsense_d435i_841512071464.yaml
@@ -2,7 +2,7 @@
 
 #common parameters
 imu_topic: "/d435i/imu"
-image_topic: "/d435i/color/image_raw"
+image_topic: "/camera2/color/image_raw"
 output_path: "/home/neousys/output/"
 
 #camera calibration 
