--- a/src/ar_slam_ros/config/realsense/nrsl_realsense_d435i_841512071464.yaml
+++ b/src/ar_slam_ros/config/realsense/nrsl_realsense_d435i_841512071464.yaml
@@ -2,7 +2,7 @@
 
 #common parameters
 imu_topic: "/d435i/imu"
-image_topic: "/camera2/color/image_raw"
+image_topic: "/d435i/color/image_raw"
 output_path: "/home/neousys/output/"
 
 #camera calibration 
@@ -95,10 +95,10 @@ nOctaveLayers: 3
 scale_thresh: 1.0
 
 #使用哪种特征检测,
-# 0->cv::goodFeaturesToTrack
+# 0->cv::goodFeaturesToTrack, 使用Patch作为匹配
 # 1->cv::SIFT
 # 2->gpu::SIFT
-detector_type: 1
+detector_type: 0
 
 ## 是否画图显示滑动窗口
-SHOW_TRACK_IMAGE: 1
+SHOW_TRACK_IMAGE: 0
