--- a/ar_slam_ros/vins_estimator/package.xml
+++ b/ar_slam_ros/vins_estimator/package.xml
@@ -42,6 +42,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>camera_model</build_depend>
+  <build_depend>svo</build_depend>
   <run_depend>roscpp</run_depend>
 
 
